# Book-Shop-API

./: .env  README.md  pyproject.toml
app/: database.py  main.py  models.py
app/crud/: book.py  user.py
app/routers/: book.py  user.py
app/schemas/: book.py  user.py
tests/: test_book.py  test_user.py
